--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -39,7 +39,7 @@
                         <li class="action-list__item action-list__item_margin-left">PLAY!</li>
                     </ul>
                     <ul class="section-hero__nav-list">
-                        <li class="nav-list__item nav-list__item_modify-size nav-list__item_color-yellow"><a href="#" class="nav-list__link nav-list__link_color-yellow">PLAY NOW ✔</a></li>
+                        <li class="nav-list__item nav-list__item_modify-size nav-list__item_color-yellow"><a href="/game/1/" class="nav-list__link nav-list__link_color-yellow">PLAY NOW ✔</a></li>
                         <li class="nav-list__item nav-list__item_modify-size nav-list__item_color-white"><a href="#" class="nav-list__link nav-list__link_color-white">HOW TO PLAY ✔</a></li>
                     </ul>
                 </div>
