--- a/application/static/game/styles/main.css
+++ b/application/static/game/styles/main.css
@@ -88,7 +88,11 @@ body {
 
 .card {
     position: absolute;
-    box-shadow: -1px 1px 2px 2px rgba(0, 0, 0, 0.4);
+    box-shadow: -1px 1px 2px 2px rgba(255, 3, 3, 0.4);
+}
+
+.active-player-card {
+    box-shadow: -1px 1px 2px 2px rgb(0, 122, 47);
 }
 
 .card-info {
