--- a/application/templates/sign_up.html
+++ b/application/templates/sign_up.html
@@ -13,28 +13,35 @@
     <main class="main">
         <div class="wrapper">
             <h2>Sign up</h2>
+            <!-- Form -->
             <form method="post" action="" class="form">
                 <input name="csrf_token" type="hidden" value="{{ csrf_token() }}" />
+                <!-- Username field(required) -->
                 <div class="field">
                     <label for="username" class="label-field">Username</label>
                     <input id="username" placeholder="Enter nickname..." name="username" type="text" required />
                 </div>
+                <!-- Password field(required) -->
                 <div class="field">
                     <label for="password" class="label-field">Password</label>
                     <input id="password" placeholder="Enter password..." name="password" type="password" minlength="10" required />
                 </div>
+                <!-- Age field(required) -->
                 <div class="field">
                     <label for="age" class="label-field">Age</label>
                     <input id="age" placeholder="Select your age..." name="age" type="number" required />
                 </div>
+                <!-- Email field(required) -->
                 <div class="field">
                     <label for="email" class="label-field">Email</label>
                     <input id="email" placeholder="Enter email..." name="email" type="email" required />
                 </div>
+                <!-- Name field -->
                 <div class="field">
                     <label for="name" class="label-field">Name</label>
                     <input id="name" placeholder="(Optional) Enter your name..." name="name" type="text" />
                 </div>
+                <!-- Surname field -->
                 <div class="field">
                     <label for="surname" class="label-field">Surname</label>
                     <input id="surname" placeholder="(Optional) Enter your surname..." name="surname" type="text" />
