--- a/application/static/game/styles/main.css
+++ b/application/static/game/styles/main.css
@@ -228,3 +228,21 @@ body {
     background: linear-gradient(45deg, rgb(4, 37, 4), rgb(0, 14, 0));
     box-shadow: 3px 3px 5px 5px rgb(0, 14, 0);
 }
+
+.music-button {
+    position: fixed;
+    width: 100px;
+    height: 100px;
+    bottom: 5%;
+    right: 5%;
+    background-size: contain;
+    background-image: url("/static/index/images/play-button.png");
+    transition-duration: 0.2s;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: transparent;
+}
+
+.music-button:active {
+    transform: translateY(2px);
+}
