--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -47,8 +47,12 @@
                         <li class="action-list__item action-list__item_margin-left">PLAY!</li>
                     </ul>
                     <ul class="section-hero__nav-list">
-                        <li class="nav-list__item nav-list__item_modify-size nav-list__item_color-yellow"><a href="/game/1/" class="nav-list__link nav-list__link_color-yellow">PLAY NOW ✔</a></li>
-                        <li class="nav-list__item nav-list__item_modify-size nav-list__item_color-white"><a href="#" class="nav-list__link nav-list__link_color-white">HOW TO PLAY ✔</a></li>
+                        <li class="nav-list__item nav-list__item_modify-size nav-list__item_color-yellow">
+                            <a href="/game_lobby/1/" class="nav-list__link nav-list__link_color-yellow">PLAY NOW ✔</a>
+                        </li>
+                        <li class="nav-list__item nav-list__item_modify-size nav-list__item_color-white">
+                            <a href="#" class="nav-list__link nav-list__link_color-white">HOW TO PLAY ✔</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -76,8 +80,10 @@
         <div class="wrapper-section wrapper-section__footer">
             <h2 class="footer__heading footer__heading_margin-bottom">PLAY GAMES AND DO NOT CARE ABOUT TIME AND MONEY</h2>
             <p class="footer__description footer__description_margin-bottom">
-                To play online, you do not need to leave your own house – just choose a convenient time and give yourself
-                to the fascinating action unfolding on the screen. Interface quickly gained the sympathy of different categories of gamers.
+                To play online, you do not need to leave your own house –
+                just choose a convenient time and give yourself
+                to the fascinating action unfolding on the screen.
+                Interface quickly gained the sympathy of different categories of gamers.
                 And true – their plots are diverse, and the design makes you feel delighted.
             </p>
             <span class="nav-list__item nav-list__item_modify-size nav-list__item_color-yellow nav-list__item_correct-form"><a href="#" class="nav-list__link nav-list__link_color-yellow">MORE ABOUT ✔</a></span>
