--- a/application/templates/lobby.html
+++ b/application/templates/lobby.html
@@ -1,28 +1,29 @@
-{% extends "game-info.html" %}
-{% block head %}
-    <html lang="ru">
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport"
-                  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-            <meta http-equiv="X-UA-Compatible" content="ie=edge">
-            <link rel="stylesheet" href="/static/index/styles/normalise.css">
-            <link rel="stylesheet" href="/static/game/styles/main.css">
-            <title>Game</title>
-            <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-            <script src="/static/game/scripts/main.js"></script>
-            <script src="/static/index/scripts/music.js"></script>
-        </head>
-        <body>
-            <div class="body">
+<! DOCTYPE html>
+<html lang="ru">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="/static/index/styles/normalise.css">
+        <link rel="stylesheet" href="/static/game/styles/main.css">
+        <title>Game</title>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+        <script src="/static/game/scripts/main.js"></script>
+        <script src="/static/index/scripts/music.js"></script>
+    </head>
+    <body>
+        <div class="body">
+        {{ user.username }}
+        {% if not lobby.game_status %}
             <form method="post">
                 <input name="csrf_token" type="hidden" value="{{ csrf_token() }}" />
                 <input type="submit" value="Start game" />
             </form>
-{% endblock %}
-{% block body %}
-            </div>
-            <button id="music-button" class="music-button"></button>
-        </body>
-    </html>
-{% endblock %}
+        {% else %}
+            {% include "game.html" %}
+        {% endif %}
+        </div>
+        <button id="music-button" class="music-button"></button>
+    </body>
+</html>
